[gd_scene load_steps=3 format=3 uid="uid://4vbfhvr2gpgd"]

[ext_resource type="Script" uid="uid://c51vphjx1glas" path="res://main_menu.gd" id="1_06t4h"]
[ext_resource type="Script" uid="uid://bskntb3b63a41" path="res://quit.gd" id="2_7vrkn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = 9.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 235.0
offset_right = 940.0
offset_bottom = 583.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="tutorial" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial
"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("2_7vrkn")

[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
